[tool.poetry]
name = "py_branches"
version = "1.3.0"
description = "Useful behaviors built on top of the py_trees library."
authors = ["Shunong Wu <shunongwu@gmail.com>"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/snwu1996/py_branches"
repository = "https://github.com/snwu1996/py_branches"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
packages = [{ include = "py_branches" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
py-trees = "*"
pyyaml = "*"
pynput = "^1.7"
numpy = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
